--- a/.github/workflows/build_dotnet_library.yml
+++ b/.github/workflows/build_dotnet_library.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore '${{ env.LIBRARY_PATH/library-demo.csproj}}'
+      run: dotnet restore '${{ env.LIBRARY_PATH }}/library-demo.csproj'
     - name: Build
-      run: dotnet build --no-restore '${{ env.LIBRARY_PATH/library-demo.csproj}}'
+      run: dotnet build --no-restore '${{ env.LIBRARY_PATH }}/library-demo.csproj'
