Added manual trigger capability

--- a/.github/workflows/build_dotnet_library.yml
+++ b/.github/workflows/build_dotnet_library.yml
@@ -9,6 +9,7 @@ on:
     branches: [ "master" ]
     paths:
       - 'library-demo/**'
+  workflow_dispatch:
 
 env:
   LIBRARY_PATH: './library-demo'
