--- a/.github/workflows/build_dotnet_library.yml
+++ b/.github/workflows/build_dotnet_library.yml
@@ -18,13 +18,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: ['5.0.x','6.0.x']
+    name: Running .NET Build on version ${{ matrix.dotnet-version }}
 
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: ${{ matrix.dotnet-version }}
     - name: Restore dependencies
       run: dotnet restore '${{ env.LIBRARY_PATH }}/library-demo.csproj'
     - name: Build
