--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -66,7 +66,7 @@ jobs:
           name: .net-webapi
           path: '${{ env.PUBLISH_PATH }}'
 
-  deploy:
+  deploy-to-dev:
     permissions:
       contents: none
     runs-on: ubuntu-latest
@@ -88,4 +88,28 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
+          package: '${{ env.PUBLISH_PATH }}'
+  
+  deploy-to-prod:
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    needs: deploy-to-dev
+    environment:
+      name: 'Prod'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: .net-webapi
+          path: '${{ env.PUBLISH_PATH }}'
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'app-azdevcomm-prod'
+          publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE_PROD }}
           package: '${{ env.PUBLISH_PATH }}'
